# ols-regression-engine

./: .gitignore  CMakeLists.txt  Matrix.hpp  README.md  Regression.hpp  main.cpp  test.cpp
data/: f1_matrix_data.csv  movies1.csv
include/: Regression.hpp
src/: main.cpp
test/: test.cpp
